--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: philipsoares1@gmail.com">philipsoares1@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+5531986425797">(31) 98642 5797</a></li>
+                    <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+5531">(31) </a></li>-->
                 </ul>
             </div><!--//contact-container-->
 
